2007-07-21  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* Monodoc.Editor.Gui/DocumentUndoManager.cs: Changed file name from
	  DocumentUndo.cs to DocumentUndoManager.cs
	* Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added EditAction.cs and
	  DocumentUndo.cs source file.
	* Monodoc.Editor.Gui/EditAction.cs: Added interface EditAction that
	  establishes a contract for the mehtods any editing action that
	  takes place in the editor should implement, the important ones are
	  the undo and redo methods that help implement Undo and Redo to the
	  editor.
	* Monodoc.Editor.Gui/DocumentUndo.cs: Initial skeleton for the
	  implementation for undo and redo functionality in the editor. 

2007-07-19  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBuffer.cs: Added more implementation for easy editing of
	  summary text.

2007-07-17  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Member name changes and changes
	  in the unit tests.
	* DocumentTab.cs: Changed return value of Buffer accesor to
	  DocumentBuffer.
	* DocumentBuffer.cs: Editing prototype code.

2007-07-10  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Adding delimiters that with the background
	  color indicate that certain block is editable. Right now the
	  delimiters are "[" and "]".
	* DocumentTagTable.cs: Added a background color to indicate certain
	  block is editable. Light blue is now my color of choice.

2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Did some minor changes to not cause many
	  warnings of modifications of a TextIter

2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Refactoring of several methods so that
	  they take a reference to a TextIter that indicates the position of
	  insertion instead of an int that indicates the offseat of
	  insertion.

2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 
